Reverted back to singular CHAINPOINT_NODE_PUBLIC_URI
