# lib/endpoints/config.js
@@ -34,9 +34,7 @@ async function getConfigInfoV1Async (req, res, next) {
 
   res.send({
     version: version,
-    chainpoint_node_public_scheme: env.CHAINPOINT_NODE_PUBLIC_SCHEME || null,
-    chainpoint_node_public_addr: env.CHAINPOINT_NODE_PUBLIC_ADDR || null,
-    chainpoint_node_port: parseInt(env.CHAINPOINT_NODE_PORT),
+    chainpoint_node_public_uri: env.CHAINPOINT_NODE_PUBLIC_URI || null,
     node_tnt_address: env.NODE_TNT_ADDRESS,
     chainpoint_core_api_base_uri: await coreHosts.getCurrentCoreUriAsync(),
     proof_expire_minutes: env.PROOF_EXPIRE_MINUTES,
